--- a/www/app/globals.css
+++ b/www/app/globals.css
@@ -5,7 +5,7 @@
 
 @theme inline {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-foreground: var(--fanpit-foreground);
   --font-sans: var(--font-blinker-sans);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -43,6 +43,7 @@
 }
 
 :root {
+    --fanpit-foreground: #8C52FF;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
